syntax = "proto3";
package ksugama.tictactoe.tictactoe;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "tictactoe/params.proto";
import "tictactoe/game_id.proto";
import "tictactoe/game_state.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/ksugama/tictactoe/x/tictactoe/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ksugama/tictactoe/tictactoe/params";
  }
  // Queries a GameId by index.
	rpc GameId(QueryGetGameIdRequest) returns (QueryGetGameIdResponse) {
		option (google.api.http).get = "/ksugama/tictactoe/tictactoe/game_id";
	}
// Queries a GameState by index.
	rpc GameState(QueryGetGameStateRequest) returns (QueryGetGameStateResponse) {
		option (google.api.http).get = "/ksugama/tictactoe/tictactoe/game_state/{index}";
	}

	// Queries a list of GameState items.
	rpc GameStateAll(QueryAllGameStateRequest) returns (QueryAllGameStateResponse) {
		option (google.api.http).get = "/ksugama/tictactoe/tictactoe/game_state";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetGameIdRequest {}

message QueryGetGameIdResponse {
	GameId GameId = 1 [(gogoproto.nullable) = false];
}
message QueryGetGameStateRequest {
	  string index = 1;

}

message QueryGetGameStateResponse {
	GameState gameState = 1 [(gogoproto.nullable) = false];
}

message QueryAllGameStateRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllGameStateResponse {
	repeated GameState gameState = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
